--- a/pom.xml
+++ b/pom.xml
@@ -43,15 +43,17 @@
                 <dependencies>
                     <dependency>
                         <groupId>org.apache.maven.surefire</groupId>
-                        <artifactId>surefire-junit4</artifactId>
-                        <version>2.12.4</version>
+                        <artifactId>surefire-junit47</artifactId>
+                        <version>2.12</version>
                     </dependency>
                 </dependencies>
                 <configuration>
                     <includes>
                         <include>**/*.class</include>
                     </includes>
-                    <excludedGroups>com.khaale.bigdatarampup.tagcloud.integrationtests.IntegrationTest</excludedGroups>
+                    <excludes>
+                        <exclude>**/integrationtests/*.class</exclude>
+                    </excludes>
                 </configuration>
             </plugin>
         </plugins>
